<resources>
    <string name="app_name">GoMetro Live</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //Welcome Activity
    <string name="activW_title">GoMetro Live</string>

    //Driver Aid Activity
    <string name="activDA_btn_live_stream">Start Trip</string>

    //Main Activity
    <string name="activM_btn_new_route">New Route</string>
    <string name="activM_btn_route_history">Route History</string>
    <string name="activM_btn_my_score"><p>m Ticketing</p></string>
    <string name="activM_btn_my_training">My Training</string>
    <string name="activM_btn_my_profile">My profile</string>
    <string name="activM_btn_logout">Logout ></string>

    //Fragment Welcome
    <string name="fragW_btn_register">Register</string>
    <string name="fragW_btn_login">Login</string>
    <string name="title_activity_driver_aid">DriverAidActivity</string>

    //Fragment trip status bar
    <string name="fragTSB_btn_heavy_traffic">Heavy Traffic</string>
    <string name="fragTSB_btn_bus_full">Bus Full</string>
    <string name="fragTSB_btn_bus_empty">Bus Empty</string>

    //Fragment Login
    <string name="fragL_etxt_username_hint">Email</string>
    <string name="fargL_etxt_password_hint">Password</string>
    <string name="fragL_btn_login">Login ></string>

    //Fragment Register Driver
    <string name="fragRD_etxt_first_name">First Name</string>
    <string name="fragRD_etxt_last_name">Last Name</string>
    <string name="fragRD_etxt_email">Email</string>
    <string name="fragRD_etxt_username">Username</string>
    <string name="fragRD_etxt_password">Password</string>
    <string name="fragRD_etxt_retype_password">Retype Password</string>
    <string name="fargRD_etxt_organization_code">Organization Code</string>
    <string name="fragRD_txtv_date_of_birth">Date of birth</string>

    //Fragment Start Trip
    <string name="fragST_txtv_route_name">Route Information</string>
    <string name="fragST_txtv_description">Description</string>
    <string name="fragST_etxt_description_hint">Description</string>
    <string name="fragST_txtv_vehicle_info">Vehicle Information</string>
    <string name="fragST_etxt_transport_company_hint">Transport Company</string>
    <string name="fragST_etxt_fare_price_hint">Fare Price</string>
    <string name="fragST_btn_start_route">Start Route</string>

    //Dialog Add Vehicle
    <string name="diagAV_txtv_heading">Vehicle Information</string>
    <string name="diagAV_etxt_number_plate">Number Plate</string>
    <string name="diagAV_btn_cancel">Cancel</string>
    <string name="diagAV_btn_done">Done</string>
    <string-array name="diagAV_array_vehicle_types">
        <item>Vehicle Type</item>
        <item>Bus</item>
        <item>Mini Bus</item>
    </string-array>

    //My Profile Activity
    <string name="activMP_title">My Profile</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_my_training">MyTrainingActivity</string>

    //TEST VAR
    <string-array name="vehcileTestArray">
        <item>Vehicle</item>
        <item>CY 100-000</item>
        <item>GP 200-000</item>
        <item>CA 300-000</item>
        <item>BRN 400-000</item>
    </string-array>

    <string-array name="routeTestArray">
        <item>Route</item>
        <item>Parktown Circular</item>
        <item>Hatfield IM</item>
    </string-array>

    <string-array name="tripTestArray">
        <item>Trip</item>
        <item>Trip A</item>
        <item>Trip B</item>
        <item>Trip C</item>
    </string-array>

</resources>
