<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etxtFLUsername"
        android:layout_width="500dp"
        android:layout_height="96dp"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="35dp"
        android:hint="@string/fragL_etxt_username_hint"/>

    <EditText
        android:id="@+id/etxtFLPassword"
        android:layout_width="500dp"
        android:layout_height="96dp"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="35dp"
        android:inputType="textPassword"
        android:hint="@string/fargL_etxt_password_hint"/>

    <Button
        android:id="@+id/btnFLLogin"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:background="@drawable/selector_blue_button"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:text="@string/fragL_btn_login"/>

</LinearLayout>