<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <requestFocus/>

    <Spinner
        android:id="@+id/spnrDAVVehicleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/etxtDAVNumberPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spnrDAVVehicleType"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:textSize="30dp"
        android:hint="@string/diagAV_etxt_number_plate"/>


    <LinearLayout
        android:id="@+id/linLayDAVResponseButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etxtDAVNumberPlate"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDAVCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="30dp"
            android:background="@drawable/selector_red_button"
            android:text="@string/diagAV_btn_cancel"/>

        <Button
            android:id="@+id/btnDAVDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="30dp"
            android:background="@drawable/selector_green_button"
            android:text="@string/diagAV_btn_done"/>

    </LinearLayout>

</RelativeLayout>